...
        android:title="Receive via Bluetooth"
        android:icon="@drawable/baseline_bluetooth"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deleteAll"
        android:orderInCategory="100"
        android:title="Delete All"
        app:showAsAction="never" />
</menu>
